# TaxHippokampoi-Hackathon

./: CMakeLists.txt  taxi-handler.c  taxi-handler.h
Clients/: a  clients.h  operation.c  queue_operation.c  taxi.h  taxi_client.h
clients/: 0-main.c  clients.h  controllers.c  operation.c
taxis/: controllers.c  taxis.h  utils.c
test/: main.c
